2012-06-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genLeftShiftLiteral): commented out wassert to work
	  around bug 3537338


2012-06-21 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/pic16c782.c,
	  device/non-free/lib/pic14/libdev/pic16f676.c,
	  device/non-free/lib/pic14/libdev/pic16f1782.c,
	  device/non-free/lib/pic14/libdev/pic16c770.c,
	  device/non-free/lib/pic14/libdev/pic16f716.c,
	  device/non-free/lib/pic14/libdev/pic16f1503.c,
	  device/non-free/lib/pic14/libdev/pic16f1507.c,
	  device/non-free/lib/pic14/libdev/pic16f1783.c,
	  device/non-free/lib/pic14/libdev/pic16c771.c,
	  device/non-free/lib/pic14/libdev/pic16c925.c,
	  device/non-free/lib/pic14/libdev/pic16f1508.c,
	  device/non-free/lib/pic14/libdev/pic16f1823.c,
	  device/non-free/lib/pic14/libdev/pic16c432.c,
	  device/non-free/lib/pic14/libdev/pic16c717.c,
	  device/non-free/lib/pic14/libdev/pic16c781.c,
	  device/non-free/lib/pic14/libdev/pic12f675.c,
	  device/non-free/lib/pic14/libdev/pic16c926.c,
	  device/non-free/lib/pic14/libdev/pic16f1509.c,
	  device/non-free/lib/pic14/libdev/pic12f629.c,
	  device/non-free/lib/pic14/libdev/pic16f684.c,
	  device/non-free/lib/pic14/libdev/pic16f688.c,
	  device/non-free/lib/pic14/libdev/pic16f630.c,
	  device/non-free/lib/pic14/libdev/pic16f747.c,
	  device/non-free/lib/pic14/libdev/pic16c946.c,
	  device/non-free/include/pic14/pic16c782.h,
	  device/non-free/include/pic14/pic16f676.h,
	  device/non-free/include/pic14/pic16f1509.h,
	  device/non-free/include/pic14/pic16c770.h,
	  device/non-free/include/pic14/pic16f716.h,
	  device/non-free/include/pic14/pic16f1782.h,
	  device/non-free/include/pic14/pic16c771.h,
	  device/non-free/include/pic14/pic16c925.h,
	  device/non-free/include/pic14/pic16f1503.h,
	  device/non-free/include/pic14/pic16f1507.h,
	  device/non-free/include/pic14/pic16f1783.h,