@@ -1,3 +1,7 @@
+2012-06-24 Borut Razem <borut.razem AT gmail.com>
+
+	* support/scripts/repack_release.sh: updated
+
 2012-06-24 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (genLeftShiftLiteral): commented out wassert to work
